# software-supply-chain

./: .gitignore  Makefile  README.md  pyproject.toml
src/software_supply_chain/: db.py  download_pypi.py  scraper.py  web.py
tests/: conftest.py  test_webserver.py
