[project]
name = "software-supply-chain"
version = "0.1.0"
authors = [{ name = "Tory Clasen", email = "ToryClasen@gmail.com" }]
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.116.0",
    "htmy>=0.7.4",
    "httpx-retries>=0.4.0",
    "httpx>=0.28.1",
    "logfire>=3.23.0",
    "opentelemetry-instrumentation-fastapi>=0.55b1",
    "opentelemetry-instrumentation-httpx>=0.55b1",
    "opentelemetry-instrumentation-requests>=0.55b1",
    "opentelemetry-instrumentation-sqlalchemy>=0.55b1",
    "opentelemetry-instrumentation-sqlite3>=0.55b1",
    "opentelemetry-instrumentation-starlette>=0.55b1",
    "opentelemetry-instrumentation-urllib>=0.55b1",
    "opentelemetry-instrumentation-urllib3>=0.55b1",
    "opentelemetry-instrumentation-urllib3>=0.55b1",
    "pydantic-settings>=2.10.1",
    "pydantic>=2.11.7",
    "sqlalchemy[asyncio]>=2.0.41",
    "sqlmodel>=0.0.24",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.12.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D203",
    "D212",
    "COM812",
    "PLC0105",
]
select = ["ALL"]

[tool.mypy]
strict = true
plugins = ['pydantic.mypy']

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = ["INP001", "S101"]

[tool.pytest.ini_options]
addopts = '-ra -vv --strict-config --strict-markers --import-mode=importlib'
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
